crates/peach_app/src/dto/openai/snapshots/peach_app__dto__openai__request__tests__tool_message_typescript_code.snap
---
source: crates/peach_app/src/dto/openai/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}",
  "name": "rust_tool",
  "tool_call_id": "456"
}
